fix project card blocked by gradient background due to unset z-index value

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -6,6 +6,8 @@
   box-shadow: var(--box-shadow);
   transition: all 0.2s;
   overflow: hidden;
+  position: relative;
+  z-index: 3;
 }
 
 .project:hover{
